--- a/Kaiserreich Korean Translation/localisation/KR_Netherlands_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Netherlands_l_english.yml
@@ -134,13 +134,13 @@ HOL_idea_public_works:0 "공공 사업"
 HOL_idea_public_works_desc:0 "If we can throw enough men and women at a problem, it is sure to be solveable."
 
 ### Naval ideas ###
-HOL_idea_convoy_tactics:0 "Destroyer Convoy Tactics"
-HOL_idea_asw_tactics:0 "Destroyer Anti-Sub Tactics"
-HOL_idea_screening_tactics:0 "Destroyer Screening Tactics"
-HOL_idea_snorkel:0 "Submarine Snorkels"
-HOL_idea_wolfpack:0 "Submarine Wolfpacks"
-HOL_idea_anti_sub_sub:0 "Anti-Submarine Submarines"
-HOL_idea_lone_wolf:0 "Lone Wolf Operations"
+HOL_idea_convoy_tactics:0 "구축함 수송 호위 전술"
+HOL_idea_asw_tactics:0 "구축함 대잠 전술"
+HOL_idea_screening_tactics:0 "구축함 은신 전술"
+HOL_idea_snorkel:0 "잠수함 스노클"
+HOL_idea_wolfpack:0 "잠수함 울프팩"
+HOL_idea_anti_sub_sub:0 "대잠 잠수함"
+HOL_idea_lone_wolf:0 "고독한 늑대 작전"
 HOL_idea_ship_a_day_tactics:0 "Ship a day tactics"
 HOL_idea_ship_a_day_tactics_desc:0 ""
 HOL_idea_convoy_sailing:0 "Convoy Sailing Tactics"
@@ -168,7 +168,7 @@ HOL_wf_cheap_cruisers_coastal_defence_pantserschip:0 "Wilton Fijenoord"
 HOL_wf_anti_air_pantserschip:0 "Wilton Fijenoord"
 HOL_wf_expensive_cruisers_anti_air_pantserschip:0 "Wilton Fijenoord"
 HOL_wf_cheap_cruisers_anti_air_pantserschip:0 "Wilton Fijenoord"
-HOL_light_cruiser_design_AA:0 "AA cruiser"
+HOL_light_cruiser_design_AA:0 "대공 순양함"
 HOL_pantserschip_design_1:0 "Coastal Defence Pantserschip"
 HOL_pantserschip_design_2:0 "AA-oriented Pantserschip"
 
@@ -405,7 +405,7 @@ HOL_european_centroamerica:0 "유럽의 센트로아메리카"
 HOL_european_centroamerica_desc:0 "There are some in our government advocating conflict against capitalists and imperialists, but many more now propose in secret a new policy - nicknamed simply 'the Centroamerica policy'. This entails merely continuing our prior neutrality with a new socialist gloss."
 HOL_finish_national_assembly:0 "Finish the National Assembly"
 HOL_finish_national_assembly_desc:0 "With a number of substantial reforms instigated and proposals outlined, the Assembly now appears to be drawing to a relative close, its primary purpose served. It has been invaluable in drawing our new socio-political system together and so its legacy will live on."
-HOL_reijnders_putsch:0 "Reijnders' Putsch"
+HOL_reijnders_putsch:0 "레인데르스의 정부 전복"
 HOL_reijnders_putsch_desc:0 "In an absolutely shocking turn of events, the head of the Dutch army, Izaak Reijnders launched a military coup d'etat in Amsterdam, stating that the nation was in danger of falling to dangerous syndicalist subversives. Holland's destiny is, for now, uncertain."
 HOL_VNH_victory:0 "VNH 선거 승리"
 HOL_VNH_victory_desc:0 "The VNH have won an astounding victory in the recent elections, supplanting the conservative CNA and plunging the nation into uncertainty. What the new government will do is, as of yet, uncertain."
@@ -417,13 +417,13 @@ HOL_intimidate_parliament:0 "Intimidate Parliament"
 HOL_intimidate_parliament_desc:0 "The new status quo cannot be guaranteed without Parliament being bullied into handing over emergency powers. Such measures might be unpleasant, but they are necessary to stave off syndicalist revolt."
 HOL_alliance_of_the_right:0 "우파의 동맹"
 HOL_alliance_of_the_right_desc:0 "Holland's problems cannot be solved by one party alone. There must be unity in purpose between nationalists and conservatives if this nation is to be saved from the dangers of radical thinking."
-HOL_CNA_on_its_own:0 "CNA가 홀로 다스림"
+HOL_CNA_on_its_own:0 "CNA의 독점"
 HOL_CNA_on_its_own_desc:0 "We do not need any other. Holland has only one guiding hand, and it will continue to preserve society until its dying breath, God willing."
 HOL_work_with_LSP:0 "Work With the LSP"
 HOL_work_with_LSP_desc:0 "If we have to work with others, then we could do no worse than the market liberal LSP. While our beliefs are primarily social, theirs tend to stress economic concerns. It is a compromise that does not pose too many problems, at least in comparison to our other 'choices'."
 HOL_martial_law_in_europe:0 "계엄령 선포"
 HOL_martial_law_in_europe_desc:0 "If we are to safeguard the new regime then it is imperative that we begin crackdowns immediately, and demonstrate our resolve to solve the nation's political crisis. By declaring martial law in Europe we will be able to make clear our determination to save Holland from itself."
-HOL_rebuild_binnenhof:0 "비넨호프 재건"
+HOL_rebuild_binnenhof:0 "빈넨호프 재건"
 HOL_rebuild_binnenhof_desc:0 "The Binnenhof is a near-sacred institution in the Netherlands, and the arson that destroyed it to many represents a clear symbol of the decay of our state and its slide into political madness. By rebuilding it we might send a widespread signal of what we hope to achieve for the future."
 HOL_red_scare:0 "The Red Scare"
 HOL_red_scare_desc:0 "The threat that the forces of socialism and treacherous syndicalism poses to our way of life cannot be underestimated. It is time that we begin making this clear to the people, if they have not already grasped a fact as basic and immutable as gravity itself."
@@ -531,7 +531,7 @@ HOL_negotiations_succeeded:0 "협상 타결!"
 HOL_negotiations_succeeded_desc:0 "Our willingness to concede on a few points, and the surprising willingness of our political rivals to come to terms, means that the negotiations have proven to be a relative success for all involved."
 HOL_cordon_sanitaire_vs_right:0 "Cordon Sanitaire Against the Right"
 HOL_cordon_sanitaire_vs_right_desc:0 "With the power of the leftists limited to a reasonable extent by our negotiations, it is time for us to unite against the forces of far-right extremism within the Netherlands."
-HOL_democratic_survival:0 "네덜란드 민주주의가 살아남았다!"
+HOL_democratic_survival:0 "네덜란드의 민주주의는 살아남았다!"
 HOL_democratic_survival_desc:0 "After months of brutal negotiations it appears that some level of stability is finally returning to Dutch politics."
 HOL_negotiate_with_the_right:0 "우파와 협상"
 HOL_negotiate_with_the_right_desc:0 "Though it might not be an ideal situation, we would be best placed to negotiate with less extremist elements of the nationalist VNH movement in order to bring some measure of peace to Dutch politics."
@@ -607,15 +607,15 @@ HOL_vlootplan_furstner:0 "Vlootplan Furstner"
 HOL_vlootplan_furstner_desc:0 "We must radically alter our navy's compesition. It is being made increasingly clear that battleships are being made redudant by the ever improving potency of the airplane. We need to expand on our existing carrier and her capabilities, and if possible acquire more naval airpower!"
 HOL_de_schelde:0 "Koninklijke de Schelde"
 HOL_de_schelde_desc:0 "The area around Vlissingen is perfect for our new shipyard expansion. First built in 1875, it has traditionally focused on repair and resupply, but it's high time we made it into a large construction area as well."
-HOL_dd_furstner:0 "Escort Destroyer"
+HOL_dd_furstner:0 "호위 구축함"
 HOL_dd_furstner_desc:0 "Our carrier and other capital ships are slow lumbering targets, and can easily be torpedoed if left unguarded. We need to ensure that our destroyers are up for that task."
 HOL_claa_furstner:0 "Anti Aircraft Light Cruiser"
 HOL_claa_furstner_desc:0 "We need ships to shoot enemy planes out of the skies to protect our fleet. A cruiser sized design is perfect for that. We can specialise our future cruiser designs to have less guns pointing at the sea, and more into the skies!"
-HOL_carrier_tactics:0 "Carrier Tactics"
+HOL_carrier_tactics:0 "항공모함 전술"
 HOL_carrier_tactics_desc:0 "We have a carrier force, but never properly studied how to use them effectively. We should remedy this at once."
-HOL_fleet_carrier:0 "The Gouden Leeuw"
-HOL_fleet_carrier_desc:0 "The HrMs Gouden Leeuw is truely the pride of our navy. The lone carrier gives us a massive boost in our capabilities, but other navies have more and bigger carriers than her. We can press her to the limit and try to get more planes in the hangar, or we can attempt to get a new one!"
-HOL_light_carrier:0 "A New light Carrier"
+HOL_fleet_carrier:0 "하우덴 레우"
+HOL_fleet_carrier_desc:0 "HrMs 하우덴 레우는 명백히 우리 해군의 자부심입니다. 이 함선 단독으로도 우리의 해군력은 크게 향상되었지만, 다른 해군들은 그녀보다 더 크고, 더 많은 항공모함을 보유하고 있습니다. 우린 이 함선을 극한까지 개조해 격납고에 더 많은 비행기를 탑재시킬 수 있고, 아니면 새 함재기를 탑재해 볼 수도 있습니다!"
+HOL_light_carrier:0 "새로운 경항공모함"
 HOL_light_carrier_desc:0 ""
 
 HOL_vlootplan_helfrich:0 "Vlootplan Helfrich"
@@ -854,12 +854,12 @@ HOL_council_communist:0 "KAPN"
 HOL_council_communist_long:0 "네덜란드 공산노동당"
 
 ### Events ###
-holst.1.t:0 "1936년 네덜란드"
+holst.1.t:0 "1936년의 네덜란드"
 holst.1.d:0 "네덜란드는 세계대전 동안 독일 편에 붙자는 논의가 있었음에도 불구하고 중립을 유지한 유럽의 몇 안되는 국가 중 하나입니다. 세계대전이 끝난 후 네덜란드는 경제 호황의 혜택을 맛보았지만, 경제의 상당 부분이 독일 회사의 대규모 투자와 함께 독일인의 손에 놓여 있습니다. 게다가 1920년대에 프랑스가 무너지고 영국이 생디칼리즘에 물드면서 좌익 사상이 네덜란드에서 크게 관심을 끌고 있으며 반동적인 사상에도 점점 탄력이 붙고 있습니다. 국제적 긴장도가 높아지고 경제 번영이 끝나면서 네덜란드의 민주주의는 확실히 시험받을 것입니다."
 holst.1.a:0 "여왕 폐하 만세!"
 holst.1.b:0 "정치관련 중점은 어디있나요?"													
 
-holst.10001.t:0 "유동적인 중점트리"
+holst.10001.t:0 "유동적인 중점 트리"
 holst.10001.d:0 "The Netherlands is making use of a new features in the 1.5 patch; dynamic focus trees! This lets us load parts of a focus tree on the fly enabling us to make larger focuses trees without having to show all of it at once. This can save a lot of scrolling but also preserve surprise about what paths lie ahead. For the Netherlands, the political focuses are hidden until they are available to you, so don't worry about not being able to see them right away, they'll be revealed in time..."
 holst.10001.a:0 "정말 멋지네요!"
 
@@ -938,31 +938,31 @@ holel.4.b:0 "란트바흐트와 함께 하도록 의회를 '설득'하라."
 
 holel.5.t:0 "빌헬미나 여왕의 퇴위"
 holel.5.d:0 "Disillusioned with the unconventional outcome of the elections, Queen Wilhelmina has announced that she will abdicate.\nShortly after this announcement the demissionary Colijn government then asked the new parliament to approve the financing of the crowning ceremony, yet the RSAP and republican wing of the SDAP voted the suggestion away.\nAfter the voting procedures Henk Sneevliet came outside to speak to the crowd of people and NRFers and declared that 'the queen has abdicated and the former government is rapidly packing its bags. The Dutch left has won!'\nThe day after the Red Front stopped other parliamentarians from entering parliament, and voted a completely rewritten, socialist, constitution in."
-holel.5.a:0 "Leve de Republiek!"
+holel.5.a:0 "공화국 만세!"
 
 holel.6.t:0 "빌헬미나 여왕의 퇴위"
 holel.6.d:0 "Queen Wilhelmina was unwilling to give Albarda the post of Formateur, despite the fact that he had won a resounding victory in the elections. As a result Albarda had announced that he would only take part in a coalition if he would become prime minister, meaning he would need to work with the RSAP.\n\nCritics are now saying Wilhelmina pushed Albarda into radicalism and many are demanding that she resigns, it wouldn't take long."
-holel.6.a:0 "Leve de Republiek!"
+holel.6.a:0 "공화국 만세!"
 holel.6.b:0 "Juliana is crowned and makes Albarda Formateur."
 
-holel.7.t:0 "General Reijnders Requests Support"
+holel.7.t:0 "레인데르스 장군이 지원을 요청하다"
 holel.7.d:0 "We have been watching our small neighbour, the Netherlands, for quite some time. It has become apparent that the Dutch left has won this year's elections and that it may soon join find itself being ruled by syndicalists. This is a worrying development as the Ruhr area is heavily dependent on the Dutch harbour of Rotterdam.\n\nToday the leader of the Dutch armed forces, Izaak Reijnders, came here to ask for support to launch a putsch; this could be the perfect opportunity to ensure the Dutch government remains aligned with our interests. Others however argue that in those days of crisis it should not be Germany's place to mess with other countries, even less so when it would cost money or resources."
 holel.7.a:0 "Herr Reijnders can count on our support."
 holel.7.b:0 "Sadly, we cannot support you."
 
-holel.8.t:0 "Reijnders Launches a Military Putsch"
+holel.8.t:0 "레인데르스가 군사 쿠데타를 일으키다"
 holel.8.d:0 "While the last votes were being counted, General Reijnders suddenly seized control of the nation's primary radio broadcaster and unilaterally declared the country to be in 'state of emergency'.\n\nIn Amsterdam, The Hague, Utrecht, Eindhoven and Groningen, soldiers were deployed to occupy strategic points, such as bridges and public buildings. The demissionary Colijn government was preparing its response when suddenly a putschist detachment of soldiers burst into the building and placed all ministers under house arrest.\n\nIn Groningen, the crisis lasted less than an hour, however, as a loyalist army group joined up with the NRF and several 'volunteer guards', driving the revolting putschists back to the city limits. Following this, more loyalist forces began to rendezvous and launch attacks on the military forces holding the key strong points across the nation."
-holel.8.a:0 "The loyalist counter-attack is routed."
-holel.8.b:0 "The putsch is successfully crushed."
+holel.8.a:0 "왕당파들에게 치명적인 한 방이다."
+holel.8.b:0 "쿠데타는 성공적으로 진압되었다."
 
-holel.9.t:0 "Generaal Reijnders Arrested"
+holel.9.t:0 "레인데르스 장군이 체포되다"
 holel.9.d:0 "General Reijnders was apprehended at the border today, carrying documents showing that he was seeking German support to carry out a putsch, something he evidently didn't receive as he was returning by motorcarriage rather than the plane he demanded.\nBecause of the successful arrest of Reijnders, any risk of a putsch by the military seems to have been averted, though it may be beneficial to assess what measures we can take to improve the loyalty of the army to our constitutionally-appointed government."
-holel.9.a:0 "See you in court, Reijnders!"
+holel.9.a:0 "법정에서 보세, 레인데르스!"
 
-holel.10.t:0 "Successful Military Putsch"
+holel.10.t:0 "성공적인 군사 쿠데타"
 holel.10.d:0 "The last loyalist strongholds have been broken and the country is firmly in our hands, now the question remaining is how the country shall be ruled henceforth.\n\nDemocracy is, at least for now, ruled out because the people would just vote in leftists to parliament, which is not what we want. The choice lies between whether we set up a military junta under the lead of Reijnders or whether we let the VNH, who had tactitly supported our putsch, set up a provisional government capable of rooting out the red menace that has nestled itself in our country.\n\nMany are afraid however that the VNH will not be too willing to give up their power once they have it. On top of that they also have an extremist branch that may seek to take advantage of such a situation to seize power for themselves, while this deal is of course based solely on agreement with the moderate military branch of the VNH."
-holel.10.a:0 "We shall set up a junta."
-holel.10.b:0 "The VNH shall save our country."
+holel.10.a:0 "우리는 군정을 유지할 것이다."
+holel.10.b:0 "VNH가 조국을 지켜낼 것이다."
 
 holsdap.1.t:0 "SDAP가 선거에서 우승하다"
 holsdap.1.d:0 "The SDAP's growing public support has paid off in a big way. The votes have been tallied, and not only has the SDAP managed to gain the majority of the Lijst Links votes, it has won a landslide victory and actually enjoys a small, but comfortable parliamentary majority, with even the CNA relegated to the sidelines. This has sparked a massive debate within the party regarding which course to take.\n\nThere is a large moderate lobby which advocates abandoning the last vestiges of revolutionary thought, and to form a coalition with the VDB liberals in order to cement our position as a legitimate part of the political landscape. Others claim that our majority position means we alone have the mandate of the people, and that we should thus forge ahead on our own. Finally, some suggest that we should return to our roots, and seize this opportunity to start a revolution within the system, seeking out the help of the RSAP in establishing a socialist state."
