--- a/Kaiserreich Korean Translation/localisation/KR_Romania_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Romania_l_english.yml
@@ -7,10 +7,10 @@ ROM_extradited_iron_guard:0 "Extradited Iron Guard"
 ROM_kept_iron_guard:0 "Home to the Iron Guard leadership"
 ROM_claimed_transylvania:0 "Pressed claims on Transylvania"
 ROM_suspected_assassination:0 "Suspected of assassination attempt"
-ROM_nationalized_oil_fields:0 "Nationalised oil fields"
-ROM_continued_oil_shipments:0 "Continued oil shipments"
-ROM_stopped_oil_shipments:0 "Stopped oil shipments"
-ROM_stopped_oil_shipments_trade:0 "Restricted exports"
+ROM_nationalized_oil_fields:0 "독일 자산 포획"
+ROM_continued_oil_shipments:0 "독일 자산을 납둠"
+ROM_stopped_oil_shipments:0 "통상금지"
+ROM_stopped_oil_shipments_trade:0 "제한적인 수출"
 ROM_handed_over_dobrudzha:0 "Handed Dobrogea over"
 ROM_refused_dobrudzha:0 "Refused to hand over Dobrogea"
 
@@ -88,8 +88,8 @@ ROM_entrench_party:0 "Entrench Party"
 ROM_entrench_party_desc:0 "The Iron Guard only took over in 1935 and while it is currently the most popular party of the country, there are many supporters for other parties and the monarchists. We need to promote membership of the Iron Guard and firmly entrench it in the Romanian political scene."
 ROM_echipa_mortii:0 "Echipa Mortii"
 ROM_echipa_mortii_desc:0 "The Iron Guard has an action squad called Echipa Mortii, or \"Death Squad\", who have the mission to go everywhere in Romania and to sing. It is called Death Squad because its members have to accomplish their mission even with the risk of being killed by enemies of the Guard."
-ROM_stop_oil_shipments:0 "석유 수송 중단"
-ROM_stop_oil_shipments_desc:0 "With the Germans and the Syndicalists tearing each other to pieces, we can finally keep our oil to ourselves."
+ROM_stop_oil_shipments:0 "독일 자산 포획"
+ROM_stop_oil_shipments_desc:0 "With the Germans and the Syndicalists tearing each other to pieces, we can nationalise certain key industries that just happen to be in German hands."
 ROM_crush_royalists:0 "군주주의자 궤멸"
 ROM_crush_royalists_desc:0 "It is time to crush the Monarchists once and forever. There never will be another leader of Romania than our great Conducător!"
 ROM_crush_royalists_tooltip:0 "Has won the civil war or averted it"
@@ -188,9 +188,6 @@ ROM_national_populist_party_long:0 "Garda de Fier"
 ### Additional Party Names ###
 ROM_totul_pentru_tara:0 "TPT"
 ROM_totul_pentru_tara_long:0 "Totul Pentru Ţară"
-
-### Leader Descriptions ###
-POLITICS_CORNELIU_ZELEA_CODREANU_DESC:0 "The Conducător, Corneliu Zelea Codreanu, is the undisputed leader of the populist Iron Guard and leader of Romania. A fanatic nationalist, he seeks to unite all lands inhabited by Romanians, from Transylvania to Dobrogea, and throw off the German yoke once and for all."
 
 ### Events ###
 romania.0.t:0 "[From.GetName]"
@@ -390,8 +387,8 @@ romania.43.t:0 "Romania Nationalised the Ploiesti Oil Fields!"
 romania.43.d:0 "After Romania's defeat in the Weltkrieg, we were promised control over the rich oilfields of Ploiesti. The current dictator, Codreanu, taking advantage of the state of our economy, has just nationalised the oilfields with much fanfare, yet didn't dare stop the oil shipments and also promised to compensate our oil companies. Opposing him at this point would likely frighten investors even more, potentially killing any chance of stopping our current economic crisis."
 romania.43.a:0 "Okay, but we will be watching them."
 
-romania.44.t:0 "Romania Declares the Bucharest Treaty Dead"
-romania.44.d:0 "In our darkest hour the treacherous Romanians have decided to stab us in the back and stop their oil shipments. One day they will pay for their treachery."
+romania.44.t:0 "Romania seizes German Assets"
+romania.44.d:0 "The Regime of [ROM.GetNameDef] declared all treaties between our nations invalid and seized our assets in their country. While this is a grave breach of contract, we are currently unable to do anything about this."
 romania.44.a:0 "Verdammt."
 
 romania.45.t:0 "Plebiscite in Dobrogea?"
