--- a/Kaiserreich Korean Translation/localisation/KR_Russia_Foreign_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Russia_Foreign_l_english.yml
@@ -365,7 +365,7 @@ rusfor.53.d:0 "Areas of the former Ottoman puppet state of Armenia are now firml
 rusfor.53.a:0 "Great!"
 
 rusfor.54.t:0 "The Tsar Visits Buckingham Palace"
-rusfor.54.d:0 "With the liberation of the United Kingdom, our English allies have regained their homeland! This is a great victory for the Entente Cordial! Our glorious Tsar took this opportunity to cement relations between the British and Russian Empires, paving the way for peace and stability from the chaos and anarchy that so nearly destroyed us after the Weltkrieg. The Tsar personally met Edward VII and promised both economic and military support to the British Empire through these times of recovery. It is also noted that both the leaders agreed, that all the pain both nations suffered is the Germans fault, and rumours persist of war plans against the Germans to reclaim their rightful lands..."
+rusfor.54.d:0 "With the liberation of the United Kingdom, our English allies have regained their homeland! This is a great victory for the Entente Cordial! Our glorious Tsar took this opportunity to cement relations between the British and Russian Empires, paving the way for peace and stability from the chaos and anarchy that so nearly destroyed us after the Weltkrieg. The Tsar personally met Edward VIII and promised both economic and military support to the British Empire through these times of recovery. It is also noted that both the leaders agreed, that all the pain both nations suffered is the Germans fault, and rumours persist of war plans against the Germans to reclaim their rightful lands..."
 rusfor.54.a:0 "This is only the first step."
 
 rusfor.55.t:0 "Russian Assistance"
