--- a/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
@@ -33,9 +33,9 @@ AZB_joined_mitteleuropa3:0 "제국협정 가입"
 AZB_NOT_joined_mitteleuropa:0 "제국협정 가입 거부"
 RUS_ignored_german_demands:0 "독일의 요구 무시"
 RUS_backed_down_caucasus:0 "코카서스에서의 퇴각"
-GER_ceased_contacts_RUS:0 "그들과의 모든 접촉을 중단"
-GER_ceased_contacts_RUS2:0 "우리와의 모든 접촉을 중단"
-GER_declared_war_RUS:0 "우리와의 전쟁을 선포하다"
+GER_ceased_contacts_RUS:0 "러시아와의 모든 접촉을 중단함"
+GER_ceased_contacts_RUS2:0 "우리와의 모든 접촉을 중단함"
+GER_declared_war_RUS:0 "러시아에게 전쟁을 선포하다"
 GER_backed_down_caucasus1:0 "코카서스에서 패배를 인정"
 GER_backed_down_caucasus2:0 "코카서스에서 패배를 인정"
 RUS_tried_coup_DKB:0 "우리에게 쿠데타시도"
@@ -301,19 +301,6 @@ RUS_let_poland_independent:0 "우리를 독립하게 두다"
 RUS_reintegrate_poland:0 "우리를 재통합하다"
 RUS_established_puyi_manchuria:0 "만주에 푸이를 세우다"
 RUS_not_established_puyi_manchuria:0 "만주에 푸이를 세우지 않다"
-
-### Leader descriptions ###
-POLITICS_BORIS_SAVINKOV_DESC:0 "극단적인 민족주의자이자 인민당원인 '나로드노-레스부샤 파르티야 로시이'와 '전투 부대' 로 알려진 과격한 준군사 조직의 지도자보리스 비크토로비치 사빈코프는 원래 사회주의 혁명 정당의 주도적인 당원이었으며, 그 당의 우익 세력을 NRPR로 유인했습니다. 노련한 작가이자 선동 정치가인 사빈코프는 좌파의 약함에 대한 강한 증오심을 품고 있고 러시아를 그것의 영웅적인 반응으로 복원하려는 거창한 꿈을 가지고 있습니다."
-POLITICS_DMITRI_ROMANOV_DESC:0 "러시아의 마지막 차르 니콜라이 2세의 사촌이자 러시아 귀족들 사이에서 가장 영향력 있는 인물인 드미트리 파블로비치는 러시아 정계를 매우 쉽게 주무릅니다. 폭넓은 인맥과 그의 지인들이 국제 관계에서 그를 기꺼이 돕습니다. 그러나 그의 국내 정책에서의 능력 부족은 그의 매력과 인격에 의해서 겨우 가려지고 있는 상황입니다."
-POLITICS_DMITRI_ROMANOV_TSAR_DESC:0 "러시아와 외국 귀족들 간의 수많은 관계는 드미트리 차르가 타국의 외교관들 및 정부와 확고한 외교 관계를 맺는데 도움을 주고, 언론에 대한 그의 뛰어난 이해도 역시 긍정적인 대중적 이미지를 형성하는데 있어서 유리함을 줍니다. 그러나 그의 국내 정책에서의 능력 부족은 그의 매력과 인격에 의해서 겨우 가려지고 있는 상황입니다."
-POLITICS_PAVEL_II_DESC:0 "아버지의 사망 당시에 겨우 12살이었던 어린 파벨 2세는 섭정 의회의 꼭두각시가 될 가능성이 매우 높습니다. 그럼에도 불구하고, 그가 최소한 그의 아버지의 매력 중 일부를 유전받았다는 사실은 분명한데, 그렇기에 만약 충분한 정치적 능력만 갖춘다면, 언젠가 그에게 독립적인 통치의 기회가 주어질지도 모릅니다."
-POLITICS_KYRIL_ROMANOV_CON_DESC:0 "러시아의 모든 정치 세력의 합의에 의해 복위된, 차르 키릴 로마노프는 갱신된 헌법에 의해 제한된 그의 권력의 많은 한계를 받아들여야만 했습니다. 그는 새로운 상황에 빠르게 적응했지만, 그의 오래된 정치적 견해와 내계 관계에 대한 가치관은 필연적으로 그와 정부 사이의 긴장을 유발할 가능성이 높습니다."
-POLITICS_KYRIL_ROMANOV_ABS_DESC:0 "20년간의 공화정 이후에 전제 군주정이 복원된 지금, 키릴 황제는 강력하고 권위적인 군주의 전통적인 이미지를 가진, 로마노프 황가의 마지막 후계자입니다. 러시아 국민들은 수년 간의 무정부 상태가 마침내 끝나기를 희망하고 있지만, 국제 정계는 복위된, 어쩌면 공격적인 차르를 경계하면서, 의심의 눈으로 현재 상황을 주시하고 있습니다."
-POLITICS_VLADIMIR_ROMANOV_CON_DESC:0 "혁명 이후의 로마노프 일원인 블라디미르는 그의 아버지보다 더 헌법주의에 대해 완전히 새로운 견해를 가지고 있습니다. 재치있고 온화한 사람인 그는 러시아가 또 다른 혁명에서 살아남지 못할수도 있다는 것을 이해하고 러시아의 복지를 목표로 하는 모든 세력과 기꺼이 협력할 것입니다."
-POLITICS_VLADIMIR_ROMANOV_ABS_DESC:0 "혁명 이후의 로마노프 일원인 블라디미르는 그의 아버지보다 더 독재 정권에 대해 완전히 새로운 견해를 가지고 있습니다. 재치있고 온화한 사람인 그는 러시아가 또 다른 혁명에서 살아남지 못할수도 있다는 것을 이해하고 러시아의 복지를 목표로 하는 모든 세력과 기꺼이 협력할 것입니다."
-POLITICS_PYOTR_WRANGEL_TSAR_DESC:0 "러시아의 독재 정권에 대한 브란겔의 전망은 간단합니다. 강력한 규칙만이 제국을 안팎으로 적으로부터 지킬 수 있습니다. 적에게 무자비한 브란겔은 반동주의자들에게는 사랑받지만 자유주의자들과 사회주의자들에게 미움받고 있습니다. 국제 관계에서 어떤 사람들은 어려운 시기에 그를 강인한 사람으로 인식하지만 다른 사람들은 언젠가 그가 유럽의 새로운 국가 헌병이 될지도 모른다고 두려워합니다."
-POLITICS_ANTON_DENIKIN_DESC:0 "안톤 아바노비치 드니킨은 결국 모스크바를 점령하기 전에 트로츠키와 마크노를 제치고 러시아 내전 동안 백군 장군들 중 성공한 사람들 중 한 명이었습니다. 공화주의자로 추정되는 가치와 배경을 감안할 때, 정치적으로 온건하고 캐렌스키 충성파로 비춰지는, 데니킨의 진정한 정치적 동기는 실용적 애국심입니다. 그는 1925년 콜차크가 시도한 푸츠키에 대항하여 케렌스키를 지지했음에도 불구하고, 안톤 아바노비치는 러시아의 위대함을 회복하고 유지하기 위해 필요할 것이라고 계속했습니다."
-POLITICS_ALEXANDER_KERENSKY_DESC:0 "알렉산드르 케렌스키는 러시아 최초의 몰락, 수치스러운 2차 브레스트 - 리토프스크 평화 조약 및 비겁한 외교 정책과 관련된 사건으로써 러시아에서 가장 악명높은 정치가 중 한 사람입니다. 그러나 1925-1930년 NEP 프로그램에서 러시아 경제가 호황을 누렸고, 케렌스키의 내부 정책 덕분에 토지 재배포와 업계 회복에 대한 인식이 높아졌습니다. 그러나 1933-1935년의 커다란 정치 위기는 케렌스키의 체제를 거의 파괴했습니다. 케렌스키가 공화국 대통령으로 15년째 다가오고 있음에도 불구하고 그의 정부는 간신히 국가를 통제하고 있습니다. 대통령과 그의 정책이 국가 내에서 질서를 유지하거나 과거로 사라질지는 알 수 없습니다..."
 
 ### Ideas ###
 rus_austerity_measures:0 "긴축 조치"
