--- a/Kaiserreich Korean Translation/localisation/KR_Sardinia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Sardinia_l_english.yml
@@ -1,4 +1,4 @@
-﻿l_english:
+l_english:
 
 ### Parties ###
 SRD_totalist_party:0 "Lega Totalista"
@@ -147,7 +147,7 @@ SRD_italian_irredentism_desc:0 "We may be close to reuniting Italy, but Italian 
 SRD_industralize_the_south:0 "Industralise the South"
 SRD_industralize_the_south_desc:0 "Now that we have a firm control of the southern Italian peninsula, we need to integrate it into the industrial base of our island nation. We need to unite the disparate small industries of the southern penensula into a few companies that can do the work of Italy."
 SRD_sardinia_piedmont:0 "Proclaim Sardinia-Piedmont"
-SRD_piedmont_desc:0 "With Piedmont under our control, we can finally declare we have our heritage back. Sardinia-Piedmont was a great power in the 18th and 19th centuries, and we have brought back it's former glory.  We will rule northern Italy again!"
+SRD_sardinia_piedmont_desc:0 "With Piedmont under our control, we can finally declare we have our heritage back. Sardinia-Piedmont was a great power in the 18th and 19th centuries, and we have brought back it's former glory.  We will rule northern Italy again!"
 SRD_florence_concordat:0 "Florence Concordat"
 SRD_florence_concordat_desc:0 "Surely the Pope is a rational man, and will stand open to reason. It's in his best interest, and Italy's interest, that he make an alliance with us.  We need to make him see reason."
 SRD_promote_sardinian:0 "Promote Sardo"
@@ -259,11 +259,11 @@ SRD_thalassocracy:0 "Proclaim Thalassocracy"
 SRD_thalassocracy_desc:0 "Through rapid development, research of new doctrine and new ships of the line, and an overall strategy of naval superiority, we can declare without doubt that the majority of our power comes from the sea. We may never dominate all of Europe, but the coastlines of the Italian Peninsula shall be ours, forever guarded by our Royal navy."
 ### Focus - Air port ###
 SRD_airforce:0 "The Sardinian Air Fleet"
-SRD_airforce_desc:0 "It has been said by learned theorists that the future of modern conflict lies in the air. We must begin formalising the creation of a dedicated Air Fleet, complete with bases, to ensure that we are not left behind"
+SRD_airforce_desc:0 "It has been said by learned theorists that the future of modern conflict lies in the air. We must begin formalising the creation of a dedicated Air Fleet, complete with bases, to ensure that we are not left behind."
 SRD_pilot_training:0 "Pilot Training"
 SRD_pilot_training_desc:0 "We have to be careful when improving our aircraft; if our pilots cannot handle the craft all our effort will be wasted. We need to create a fine air school for our pilots, and make sure their training is up to modern standards for our new aircraft."
-SRD_expand_air_ports:0 "Expand Air Ports"
-SRD_expand_air_ports_desc:0 ""
+SRD_expand_air_ports:0 "Expand Military Air Bases"
+SRD_expand_air_ports_desc:0 "There will be some work expanding our airfields for military aircraft, as we need to clear large uninterrupted areas for our runways. At least we should be able to use the many hills in the region as good locations for our air traffic control towers."
 SRD_aviation_companies:0 "Aviation Companies"
 SRD_aviation_companies_desc:0 "Now that we have better plane designs we need to make sure that the companies manufacturing them are as productive and efficient as possible. Let's invest in specialised profuction facilities for our aircraft to reduce the cost and time required to manufacture them."
 SRD_fighters:0 "Fighters"
