--- a/Kaiserreich Korean Translation/localisation/KR_Shanqing_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Shanqing_l_english.yml
@@ -32,41 +32,19 @@ SQI_paternal_autocrat_party_long:0 "황실당"
 SQI_national_populist_party:0 "형제단"
 SQI_national_populist_party_long:0 "형제단"
 
-### Parties ### (Tian Empire Parties)
-TIE_totalist_party:0 "CPP"
-TIE_totalist_party_long:0 "중화인민당"
-TIE_radical_socialist_party:0 "CPP"
-TIE_radical_socialist_party_long:0 "중화인민당"
-TIE_syndicalist_party:0 "CPP"
-TIE_syndicalist_party_long:0 "중화인민당"
-TIE_social_democrat_party:0 "CDSP"
-TIE_social_democrat_party_long:0 "중국 민주사회당"
-TIE_social_liberal_party:0 "DPC"
-TIE_social_liberal_party_long:0 "중국 민주당"
-TIE_market_liberal_party:0 "국민당"
-TIE_market_liberal_party_long:0 "국민당"
-TIE_social_conservative_party:0 "지식인들"
-TIE_social_conservative_party_long:0 "지식인파"
-TIE_authoritarian_democrat_party:0 "IP"
-TIE_authoritarian_democrat_party_long:0 "황실당"
-TIE_paternal_autocrat_party:0 "IP"
-TIE_paternal_autocrat_party_long:0 "황실당"
-TIE_national_populist_party:0 "형제단"
-TIE_national_populist_party_long:0 "형제단"
-
 ### Opinion Modifiers ###
 GER_MANCHU_EMP:0 "Germany supports our Manchu Empire... at a cost."
 JAP_PuYi_YES:0 "Japan will put Pu-Yi"
 JAP_PuYi_NO:0 "Japan won't put Pu-Yi"
 SQI_Funds_rev_south:0 "Shangqing funds a revolution in the South"
-SQI_DEM_VLA:0 "Shangqing demands Vladivosok"
-SQI_DEM_SAS_GER:0 "Shangqing demands South-East Asia"
-SQI_DEM_SAS:0 "Shangqing demands South-East Asia"
-TIAN_south_AOG:0 "Tian Expands South"
-TIAN_south_CHI:0 "Tian Expands South"
-TIAN_west_MON:0 "Tian Expands West"
-TIAN_west_XSM:0 "Tian Expands West"
-TIAN_north:0 "Tian Expands North"
+SQI_DEM_VLA:0 "산청이 블라보스토크를 요구함"
+SQI_DEM_SAS_GER:0 "산청이 동남아시아를 요구함"
+SQI_DEM_SAS:0 "산청이 동남아시아를 요구함"
+TIAN_south_AOG:0 "천이 남쪽을 확장함"
+TIAN_south_CHI:0 "천이 남쪽을 확장함"
+TIAN_west_MON:0 "천이 서쪽을 확장함"
+TIAN_west_XSM:0 "천이 서쪽을 확장함"
+TIAN_north:0 "천이 북쪽을 확장함"
 TIAN_no_expansion:0 "Tian won't expand more"
 TIAN_south_LEC_70:0 "Tian Annexes the Legation Cities"
 TIAN_south_LEC_30:0 "Tian Annexes the Legation Cities"
