--- a/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Annexations_l_english.yml
@@ -461,12 +461,12 @@ annex.123.t:0 "우크라이나 점령
 annex.123.d:0 "After a long fight with the Breadbasket of Europe, we have launched a full offensive and forced the Ukrainian Army to surrender. Kiev is now in our hands!"
 annex.123.a:0 "지금 장을 저것들을 점령해라.."
 annex.123.b:0 "우호적인 우크라이나를 해방하라!"
-annex.123.c:0 "Hand it over to our good Russian friends!"
+annex.123.c:0 "우리의 사이좋은 러시아 친구에게 주어라!"
 annex.123.e:0 "크림반도는 가지고 우크라이나를 해방하라!"
 annex.124.t:0 "남서부 중국의 운명"
 annex.124.d:0 "남서부 중국에서의 성공적인 작전 끝에, 우리는 평화를 되찾기 위해 지역 행정권을 새로하는 과제를 안게 되었습니다. 우리에게는 몇가지 선택지가 있습니다..."
 annex.124.a:0 "군사점령을 계속하라!"
-annex.124.b:0 "Support the local republican movement !"
+annex.124.b:0 "지역 공화주의 운동을 지원하라!"
 annex.124.c:0 "윈난 공화국을 세워라!"
 annex.124.e:0 "중화인민공화국을 세워라!"
 annex.124.f:0 "충성스러운 동맹에 이 땅을 넘겨주어라..."
