--- a/Kaiserreich Korean Translation/localisation/KR_Strategic_region_names_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Strategic_region_names_l_english.yml
@@ -32,7 +32,7 @@ l_english:
  STRATEGICREGION_32:0 "남동부 태평양"
  STRATEGICREGION_33:0 "알래스카"
  STRATEGICREGION_34:0 "중부 아메리카"
- STRATEGICREGION_35:0 "남아메리카"
+ STRATEGICREGION_35:0 "파타고니아"
  STRATEGICREGION_36:0 "그린란드"
  STRATEGICREGION_37:0 "발틱 국가"
  STRATEGICREGION_38:1 "폴란드"
@@ -121,12 +121,12 @@ l_english:
  STRATEGICREGION_121:0 "동부 캐나다"
  STRATEGICREGION_122:0 "서부 캐나다"
  STRATEGICREGION_123:0 "멕시코"
- STRATEGICREGION_124:0 "북부 남아메리카"
- STRATEGICREGION_125:0 "브라질"
+ STRATEGICREGION_124:0 "베네수엘라"
+ STRATEGICREGION_125:0 "남동부 브라질"
  STRATEGICREGION_126:0 "북아프리카"
  STRATEGICREGION_127:0 "사하라 사막"
  STRATEGICREGION_128:0 "이집트"
- STRATEGICREGION_129:0 "아나톨리아"
+ STRATEGICREGION_129:0 "소아시아"
  STRATEGICREGION_130:0 "우크라이나"
  STRATEGICREGION_131_1:0 "서부 러시아"
  STRATEGICREGION_132:0 "북부 전선"
@@ -149,10 +149,10 @@ l_english:
  STRATEGICREGION_149:0 "동부 시베리아"
  STRATEGICREGION_150:0 "북극 러시아"
  STRATEGICREGION_151:0 "서부 시베리아"
- STRATEGICREGION_152:0 "몽골"
+ STRATEGICREGION_152:0 "외몽골"
  STRATEGICREGION_153:0 "북부 인도"
  STRATEGICREGION_154:0 "일본 열도"
- STRATEGICREGION_155:0 "만주"
+ STRATEGICREGION_155:0 "북서부 중국"
  STRATEGICREGION_156:0 "오스트레일리아"
  STRATEGICREGION_157:0 "뉴질랜드"
  STRATEGICREGION_158:0 "순다 열도"
@@ -188,9 +188,35 @@ l_english:
  STRATEGICREGION_188:0 "동 아프리카"
  STRATEGICREGION_189:0 "마그레브"
  STRATEGICREGION_190:0 "중앙 아프리카"
- STRATEGICREGION_191:0 "한국"
+ STRATEGICREGION_191:0 "한반도"
  STRATEGICREGION_192:0 "수마트라"
  STRATEGICREGION_193:1 "마다가스카르"
  STRATEGICREGION_194:0 "말레이 반도"
  STRATEGICREGION_195:0 "버마"
  STRATEGICREGION_196:0 "인도차이나"
+ STRATEGICREGION_197:0 "북부 안데스"
+ STRATEGICREGION_198:0 "파나마 운하"
+ STRATEGICREGION_199:0 "동 콜롬비아"
+ STRATEGICREGION_200:0 "가이아나 고원"
+ STRATEGICREGION_201:0 "중부 브라질"
+ STRATEGICREGION_202:0 "북서부 브라질"
+ STRATEGICREGION_203:0 "우루과이 바신"
+ STRATEGICREGION_204:0 "그란차코"
+ STRATEGICREGION_205:0 "알티플라노"
+ STRATEGICREGION_206:0 "페루"
+ STRATEGICREGION_207:0 "남부 안데스"
+ STRATEGICREGION_208:0 "라플라타"
+ STRATEGICREGION_209:0 "북 중국 평원"
+ STRATEGICREGION_210:0 "산둥"
+ STRATEGICREGION_211:0 "황토 고원"
+ STRATEGICREGION_212:0 "하부 양쯔강"
+ STRATEGICREGION_213:0 "중부 양쯔강"
+ STRATEGICREGION_214:0 "상부 양쯔강"
+ STRATEGICREGION_215:0 "윈구이 고원"
+ STRATEGICREGION_216:0 "링난 지역"
+ STRATEGICREGION_217:0 "둥난 지역"
+ STRATEGICREGION_218:0 "남부 만주"
+ STRATEGICREGION_219:0 "북부 만주"
+ STRATEGICREGION_220:0 "서북 지역"
+ STRATEGICREGION_221:0 "신장"
+ STRATEGICREGION_222:0 "내몽골"
