--- a/Kaiserreich Korean Translation/localisation/KR_Sweden_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Sweden_l_english.yml
@@ -149,6 +149,9 @@ SWE_national_populist_party_long:0 "Sveriges Nationella Förbund"
 ### Events ###
 
 ### Intro Events ###
+swe.9999.t:0 "What happened to the Swedish focus tree?"
+swe.9999.d:0 "Once we began reworking the Nordic nations we realised that the old Swedish focus tree wasn't compatible with the newer trees. Rather than delay the whole rework until they were all finished, we decided to remove Swedens old focus tree (well, most of it). We are sorry about taking this step backwards, but it has let development in the area move quicker. We are working on a new Swedish tree, we won't be leaving them like this forever."
+swe.9999.a:0 "That's a shame, but I understand."
 
 ### 1936 Events ###
 
@@ -276,6 +279,3 @@ tech_ski_infantry:0 "Ski Infantry"
 tech_ski_infantry_effect:0 "Enables §HSki Infantry§!\n§HInfantry\n    Hills§!\n      Attack: §G+5%§!\n      Defence: §G+5%§!\n      Movement: §G+5%§!\n    §HMountain§!\n      Attack: §G+5%§!\n      Defence: §G+5%§!\n      Movement: §G+10%§!\n"
 SWE_naval_construct_tt:0 "Add production of §Y2 Destroyers§! and §Y1 Light Cruiser§!.\n"
 SWE_hms_karl_xii_tooltip:0 "Gain the Battlecruiser §YHMS Karl XII§!.\n"
-
-### Leader descriptions ###
-POLITICS_Gustaf_V_DESC:0 "Gustaf V Bernadotte was born in 1858 and was the crown-prince of Sweden and Norway from 1872. It is no wonder that he is a man of the old ways, as during his father's reign the King of Sweden acted both as head of state and head of government, with ministers held responsible only to him. However, just two years before Gustaf's ascension to the throne, in 1905 his father had been forced to accept a government chosen by the majority in Parliament. \n\nWhen Gustaf first took the throne in 1907 he also ended a Swedish tradition of roughly 700 years when he refused a coronation. As such, during his reign as a king, he never wore a crown. While at first ambivalent about the Swedish politicians he angered in February 1914, when the Swedish liberal government wanted to cut in military spending. After holding a speech condemning their actions, the liberal government stepped down and was replaced by civil servants appointed by Gustav himself. In the following 1917 elections the Liberals and Social democrats made heavy gains, but Gustaf still attempted installing a conservative government. However, they were unable to form a coalition and Gustaf realised he could no longer appoint governments of his own choosing. During the following reforms, he found himself forced to act upon his minister's advice, and not the other way around. \n\nHe is married to the sickly Queen Victoria of Baden, who is known to be wearing the pants in the Royal household, especially concerning the King's attempted influence in politics in general and the close relations to Germany in particular."
