7월 30일 오스트랄라시아 번역
연구 쪽 국가 중점 번역 완료

--- a/Kaiserreich Korean Translation/localisation/KR_Australasia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Australasia_l_english.yml
@@ -279,27 +279,27 @@ AST_new_resources_2:0 "새로운 자원 찾기"
 AST_new_resources_2_desc:0 "이 모든 길들과 철도들은 나라의 구석구석을 탐사자들과 광산 개발업자들에게 개방했습니다. 우리는 그들을 보상으로 격려해야 합니다."
 
 AST_research_council:0 "오스트랄라시안 연구 위원회"
-AST_research_council_desc:0 "Technological advancement will be the cornerstone of our future success. A recent royal commission has advised the government to establish a department to ensure such research is co-ordinated across the country."
+AST_research_council_desc:0 "기술적 발전은 우리의 미래의 성공의 주춧돌이 될 것입니다. 최근 왕립 위원회는 정부가 그런 연구를 전국에서 조직화할 수 있게 하는 기관의 설립하도록 권고했습니다."
 AST_join_ISAC:0 "ISAC 참여"
-AST_join_ISAC_desc:0 "By joining the Imperial Scientific and Academic Council, we will be able to greatly expand our research potential through funding and information sharing."
+AST_join_ISAC_desc:0 "제국 과학 학술 위원회에 참여함으로써 투자와 연구를 공유해서 우리의 연구의 잠재력을 현저히 상승시킬 수 있을 것입니다."
 AST_council_funding:0 "위원회 확대"
-AST_council_funding_desc:0 "Rather than rely on outside assistance, our focus should be on expanding the ARC and ensuring that it has access to the best scientists Australasia can offer."
+AST_council_funding_desc:0 "외부의 도움에 기대기보다는 오스트랄라시아 연구 위원회를 확장하고 오스트랄라시아가 제공할 수 있는 최고의 과학자들과 접근할 수 있도록 하는데에 초점을 두어야합니다."
 AST_radar_focus:0 "레이더에 주력"
-AST_radar_focus_desc:0 "If Australasia faces an invasion, it will come from across the sea. Thus we should invest heavily into new radar technologies, and build watch stations along the coast."
+AST_radar_focus_desc:0 "오스트랄라시아가 침략받는다면 적들은 바다를 건너서 올 것입니다. 따라서 우리는 새로운 레이더 기술에 상당한 투자를 해야하고 해안을 따라 초소를 더 지어야합니다."
 AST_computer_focus:0 "컴퓨터에 주력"
-AST_computer_focus_desc:0 "Computer technology is in its infancy, but already we can see the benefits it offers to encryption and decryption efforts. Australasia needs to stay ahead of this, or our enemies will end up knowing our moves long before we do."
+AST_computer_focus_desc:0 "컴퓨터 기술은 이제 막 태동했지만 이미 암호화와 복호화에 이득을 가져올 것으로 예측됩니다. 오스트랄라시아는 여기서 더 앞서나갈 필요가 있습니다. 그렇지 않으면 우리의 적들이 우리가 아는 것보다도 더 앞서나가버릴테니까요."
 AST_national_university:0 "국립대학"
-AST_national_university_desc:0 "It is important to remember that scholarly pursuits are needed to maintain our position. Generous funding increases to the National University in Canberra will allow us to educate the masses and become a beacon of new research."
+AST_national_university_desc:0 "학문적인 추구가 우리의 지위를 유지하기 위해 필요하다는 점을 기억하는 것은 중요합니다. 캔버라의 국립대학의 재정을 넉넉하게 증가시키는 것은 우리에게 대중을 교육할 수 있게하는 새로운 연구의 지침이 될 것입니다."
 AST_increased_research_1:0 "증가된 연구 기금"
-AST_increased_research_1_desc:0 "Our research investments to date have paid off - it is time to increase our rate of advancement, to keep pace with the larger nations in the world."
-AST_increased_research_2:0 "New Minds in Australasia"
-AST_increased_research_2_desc:0 "Australasia has become a great power in the world. We must assemble these new minds in our universities and put them to work advancing our nation."
-AST_rocketry_division:0 "The Advanced Rocketry Division"
-AST_rocketry_division_desc:0 "The future lies in the development of rocket engines - both for our air force as well as for the development of new and powerful weapons that operate at a speed never before achievable."
-AST_oil_exploration:0 "New Oil Exploration"
-AST_oil_exploration_desc:0 "Australia and New Zealand have considerable oil reserves, though they are largely contained in offshore and shale deposits. Accessing those deposits, however, should be a priority for our government."
-AST_uranium_mining:0 "Radium Hill Uranium"
-AST_uranium_mining_desc:0 "The Radium Hill uranium mine gives us an advantage in the nuclear arms race that few other countries possess: a ready supply of the resource, to use - or not to use - as we desire."
+AST_increased_research_1_desc:0 "우리의 지금까지의 연구 기금은 성공했습니다. 이제는 발전의 속도를 높이고 세계의 더 큰 나라들과 발을 맞출 때입니다."
+AST_increased_research_2:0 "오스트랄라시아의 새로운 석학들"
+AST_increased_research_2_desc:0 "오스트랄라시아는 세계의 열강이 되었습니다. 우리는 이 새로운 석학들을 집합시켜 우리의 나라를 발전시킬 작업에 투입해야만 합니다."
+AST_rocketry_division:0 "발전된 로켓 부서"
+AST_rocketry_division_desc:0 "우리의 미래는 로켓엔진의 개발에 달려 있습니다. 우리의 공군을 위해서 뿐만 아니라 이전에 절대 달성 불가였던 속도를 다루는 새롭고 강력한 무기의 개발을 위해서도 말입니다."
+AST_oil_exploration:0 "새로운 원유 탐사"
+AST_oil_exploration_desc:0 "오스트레일리아와 뉴질랜드는 상당한 원유 매장량을 가지고 있지만 대부분 해안가나 셰일 층에 속해있습니다. 하지만 이 매장량에 접근하는 것은 우리 정부의 우선사항이 되어야만 합니다."
+AST_uranium_mining:0 "라듐 힐의 우라늄"
+AST_uranium_mining_desc:0 "라듐 힐의 우라늄 광산은 우리에게 핵무기 경쟁에서 다른 나라들이 가질 수 없는 이점을 줍니다. 우리가 원하는 대로 사용할 수 있는 - 혹은 사용하지 않을 수도 있는 - 자원의 공급이 준비되어 있습니다."
 
 AST_state_of_the_navy:0 "State of the RAN"
 AST_state_of_the_navy_desc:0 "During the Weltkrieg, the Royal Australian Navy was a small force that consisted of only a few small ships, and plans were to decommission even these as soon as the war ended. With the British Pacific Fleet having fled to our ports, we found ourselves in possession of a fleet that far outstrips our ability to properly manage them. This is our first and foremost issue."
