--- a/Kaiserreich Korean Translation/localisation/KR_Greece_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Greece_l_english.yml
@@ -16,7 +16,7 @@ GRE_market_liberal_party_long:0 "자유당"
 GRE_social_conservative_party:0 "LK"
 GRE_social_conservative_party_long:0 "인민당"
 GRE_authoritarian_democrat_party:0 "NK"
-GRE_authoritarian_democrat_party_long:0 "신 질서 운동"
+GRE_authoritarian_democrat_party_long:0 "신 국가 운동"
 GRE_paternal_autocrat_party:0 "KTE"
 GRE_paternal_autocrat_party_long:0 "자유 사상가당"
 GRE_national_populist_party:0 "EEL"
